# education

./: .gitattributes  .gitignore  LICENSE  README.md
books/tech/cpp/cmake/official_tutorial/step-02_2/: CMakeLists.txt
books/techno/cmake/official_tutorial/step-6/: CMakeLists.txt
books/techno/cmake/official_tutorial/step-6/MathFunctions/: MathFunctions.h
books/techno/cmake/official_tutorial/step-7/MathFunctions/: CMakeLists.txt
books/techno/cpp/cmake/c_scott-professional_cmake/ch_06-flow_control/05-common_examples/src/: CMakeLists.txt
books/techno/cpp/cmake/c_scott-professional_cmake/ch_07-using_subdirs/01-src_and_bin_dir_vars/src/: CMakeLists.txt
books/techno/cpp/cmake/c_scott-professional_cmake/ch_07-using_subdirs/01-src_and_bin_dir_vars/src/sub/: CMakeLists.txt
books/theory/h_abelson-sicp-2_ed/: readme.md
books/theory/h_abelson_et_al-sicp-2_ed/: readme.md
com/e_troelsen-dev_workshop_to_com_atl/: README.md
com/e_troelsen-developer_workshop_to_com_and_atl/: README.md
computer_science/h_abelson_et_al-sicp-2_ed/ch_01/: 1.03-eval_combinations.scm
computer_science/h_abelson_et_al-sicp-2ed/: readme.md
computer_science/h_abelson_et_al-sicp-2ed/ch_01/: 1.06-cond_exprs.scm
cpp/: readme.md
cpp/cmake/c_scott-prof_cmake/: readme.md
cpp/cmake/c_scott-professional_cmake/: readme.md
cpp/cmake/official_tutorial/step-02_1/: CMakeLists.txt
cpp/cmake/r_bast-cmake_cookbook/: readme.md
cpp/mfc/g_schildt-mfc_prg_from_the_ground_up/: README.md
cpp/mfc/g_schildt-mfc_progr_from_the_ground_up/: README.md
cpp/mfc/g_schildt-mfc_programming_from_the_ground_up/: README.md
cpp/mfc/j_prosise-prg_win_with_mfc-2ed/: README.md
cpp/mfc/j_prosise-progr_win_with_mfc-2_ed/: README.md
cpp/mfc/j_prosise-programming_windows_with_mfc-2_ed/: README.md
cpp/mfc/j_prosise-programming_windows_with_mfc-2ed/: README.md
cpp/mfc/visual_cpp_and_mfc_prg-2ed/: README.md
cpp/mfc/visual_cpp_and_mfc_progr-2_ed/: README.md
cpp/mfc/visual_cpp_and_mfc_programming-2ed/: README.md
cpp/qt/g_lazar-mastering_qt_5/: README.md
cpp/qt/g_lazar_et_al-mastering_qt_5/: README.md
cpp/qt/j_b_ryannel_et_al-qt_6_qml/: readme.md
cpp/qt/j_bocklage-ryannel-qt_6_qml/: readme.md
cpp/qt/m_shlee-qt_5_10/: readme.md
cpp/qt/m_shlee-qt_5_3/: README.md
cpp/qt/n_dey-cross_platform_dev_with_qt_6/: readme.md
cpp/qt/official/doc/DefaultProperties/: CMakeLists.txt  Main.qml  MyLabel.qml  main.cpp
cpp/std-03/a_alexandrescu-modern_cpp_design/: README.md
cpp/std-03/d_r_stephens_et_al-cpp_cookbook/: readme.md
cpp/std-03/h_sutter-exceptional_cpp/: README.md
cpp/std-03/k_gunteroth-optimized_cpp/: README.md
cpp/std-03/r_d_stephens_at_al-cpp_cookbook/: readme.md
cpp/std-03/s_c_dewhurst-cpp_common_knowledge/: README.md
cpp/std-03/s_meyers-effective_cpp/: README.md
cpp/std-03/s_meyers-effective_cpp-3ed/: README.md
cpp/std-03/s_meyers-more_effective_cpp/: README.md
cpp/std-03/v_kushnir-safe_cpp/: README.md
cpp/std-11/a_williams-cpp_concurrency_in_action/: README.md
cpp/std-11/b_sutherland-cpp_recipes/: README.md
cpp/std-11/d_di_gennaro-advanced_metaprg_in_classic_cpp/: README.md
cpp/std-11/d_di_gennaro-advanced_metaprogramming_in_classic_cpp/: README.md
cpp/std-11/r_lischner-exploring_cpp11-2ed/: README.md
cpp/std-11/r_lischner-exploring_cpp_11-2_ed/: README.md
cpp/std-11/r_lischner-exploring_cpp_11-2ed/: README.md
cpp/std-14/m_gregoire-prof_cpp-3_ed/: README.md
cpp/std-14/m_gregoire-prof_cpp-3ed/: README.md
cpp/std-14/n_m_josuttis-cpp_std_lib-2ed/: README.md
cpp/std-14/n_m_josuttis-cpp_std_library-2_ed/: README.md
cpp/std-14/p_gottschling-discovering_modern_cpp/: README.md
cpp/std-14/s_meyers-effective_modern_cpp/: README.md
cpp/std-17/a_williams-cpp_concurrency_in_action-2_ed/: readme.md
cpp/std-17/a_williams-cpp_concurrency_in_action-2ed/: readme.md
cpp/std-17/i_cukic-func_prg_in_cpp/: readme.md
cpp/std-17/i_cukic-func_progr_in_cpp/: readme.md
cpp/std-17/m_bancila-modern_cpp_prg_cookbook/: readme.md
cpp/std-17/m_bancila-modern_cpp_programming_cookbook/: readme.md
cpp/std-17/m_posch-mastering_cpp_multithreading/: README.md
cpp/std-17/n_m_josuttis-cpp_17_the_complete_guide/: readme.md
cpp/std-17/r_grimm-concurrency_with_modern_cpp/: readme.md
cpp/std-17/s_roth-clean_cpp/: README.md
cs/h_abelson_et_al-sicp-2ed/: readme.md
csharp/a_troelsen-csharp_6.0-7_ed/: README.md
csharp/a_troelsen-csharp_6_0-7ed/: README.md
csharp/j_albahari-csharp_6_0_in_a_nutshell-6_ed/: README.md
csharp/j_albahari-csharp_6_0_in_a_nutshell-6ed/: README.md
csharp/j_skeet-csharp_in_depth-3_ed/: README.md
csharp/j_skeet-csharp_in_depth-3ed/: README.md
py/d_beazly-py_cookbook/: README.md
py/d_beazly-python_cookbook/: README.md
py/l_ramalho-fluent_py/: README.md
py/l_ramalho-fluent_python/: README.md
py/m_lutz-learning_py-5_ed/: README.md
py/m_lutz-learning_py-5ed/: README.md
py/m_lutz-programming_py-4ed/: README.md
py/m_lutz-programming_python-4_ed/: README.md
software_design/e_gamma-design_patterns-4_ed/: README.md
software_design/e_gamma-design_patterns-4ed/: README.md
software_design/m_noback-object_design_style_guide/: readme.md
software_design/m_noback-principles_of_package_design/: readme.md
web/b_bibeault_et_al-jquery_in_action-3ed/: readme.md
web/d_s_mcfarland-js_and_jquery_tmm-3ed/: readme.md
web/j_n_robbins-lwb-5_ed/: readme.md
web/j_n_robbins-lwd-5ed/: readme.md
web/javascript.info/: readme.md
web/m_haverbeke-eloquent_js-3_ed/: 00.html  01.html  02.html  02_exercises.html  03.html  03_exercises.html  04_exercises.html  05.html  05_exercises.html  06.html
web/m_haverbeke-eloquent_js-3ed/: 00.html  01.html  04.html  06.html  readme.md
web/m_haverbeke-eloquent_js-4_ed/: 00.html  01.html  02.html  03.html  05_scripts.js  06.html  06_exercises.html  animatevillage.js  readme.md
web/m_haverbeke-eloquent_js-4ed/: 02.html  04.html  04_journal.js  05.html  07.html  readme.md
web/tj_vantoll-jquery_ui_in_action/: readme.md
wiki/concurrency_in_cpp/: concurrency_index.md  std_future.md  std_thread.md
wiki/qt/: README.md
(+4952 files in other folders)
